#1662 closed defect (fixed)
ape: wrong duration
| Reported by: | ami_stuff | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avformat |
| Version: | git-master | Keywords: | ape |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
the file is longer than 29s
C:\>ffmpeg -i test.ape out.wav
ffmpeg version N-43678-gceb8773 Copyright (c) 2000-2012 the FFmpeg developers
built on Aug 18 2012 02:22:03 with gcc 4.5.0 (GCC) 20100414 (Fedora MinGW 4.5.
0-1.fc14)
configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm -lpthread' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snap
shots/build/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/s
napshots/build/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3
--enable-nonfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-
libvorbis --enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-
libopencore-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
libavutil 51. 70.100 / 51. 70.100
libavcodec 54. 53.100 / 54. 53.100
libavformat 54. 25.100 / 54. 25.100
libavdevice 54. 2.100 / 54. 2.100
libavfilter 3. 10.100 / 3. 10.100
libswscale 2. 1.101 / 2. 1.101
libswresample 0. 15.100 / 0. 15.100
libpostproc 52. 0.100 / 52. 0.100
Input #0, ape, from 'test.ape':
Duration: 00:00:29.98, start: 0.000000, bitrate: 875 kb/s
Stream #0:0: Audio: ape (APE / 0x20455041), 44100 Hz, stereo, s16
Output #0, wav, to 'out.wav':
Metadata:
encoder : Lavf54.25.100
Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 44100 Hz, stereo, s16
, 1411 kb/s
Stream mapping:
Stream #0:0 -> #0:0 (ape -> pcm_s16le)
Press [q] to stop, [?] for help
size= 5171kB time=00:00:31.58 bitrate=1341.2kbits/s
video:0kB audio:5170kB subtitle:0 global headers:0kB muxing overhead 0.000869%
Change History (4)
comment:1 by , 14 years ago
comment:3 by , 14 years ago
| Component: | undetermined → avformat |
|---|---|
| Keywords: | ape added |
| Version: | unspecified → git-master |
Is this really fixed?
$ ffmpeg -i test.ape -f null -
ffmpeg version N-43846-g168ddcd Copyright (c) 2000-2012 the FFmpeg developers
built on Aug 23 2012 23:35:40 with gcc 4.5.3 (GCC)
configuration: --cc=/usr/local/gcc-4.5.3/bin/gcc
libavutil 51. 70.100 / 51. 70.100
libavcodec 54. 54.100 / 54. 54.100
libavformat 54. 25.104 / 54. 25.104
libavdevice 54. 2.100 / 54. 2.100
libavfilter 3. 13.100 / 3. 13.100
libswscale 2. 1.101 / 2. 1.101
libswresample 0. 15.100 / 0. 15.100
Input #0, ape, from 'test.ape':
Duration: 00:00:30.01, start: 0.000000, bitrate: 875 kb/s
Stream #0:0: Audio: ape (APE / 0x20455041), 44100 Hz, stereo, s16
Output #0, null, to 'pipe:':
Metadata:
encoder : Lavf54.25.104
Stream #0:0: Audio: pcm_s16le, 44100 Hz, stereo, s16, 1411 kb/s
Stream mapping:
Stream #0:0 -> #0:0 (ape -> pcm_s16le)
Press [q] to stop, [?] for help
size= 0kB time=00:00:31.58 bitrate= 0.0kbits/s
video:0kB audio:5170kB subtitle:0 global headers:0kB muxing overhead -100.000000%
comment:4 by , 14 years ago
It looks like there are 2 unrelated bugs - wrong duration and wrong current duration. The first bug is fixed, but another one not (I have created ticket #1675 for this).
Note:
See TracTickets
for help on using tickets.



http://www.datafilehost.com/download-031cc87f.html